# fastapi-template

./: .editorconfig  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  container.yml  release.yml
app/: main.py
app/api/: main.py
app/api/routes/: note_router.py  ping_router.py
app/core/: db.py  settings.py
app/dto/: note_schema.py
app/models/: note_model.py
app/schemas/: note_schema.py
app/service/: note_service.py
migrations/: env.py  script.py.mako
migrations/versions/: d5ba7a44fec4_notes_table.py
tests/: conftest.py
tests/api/routes/: test_note_router.py  test_ping_router.py
